Fix recursion in handling touch input events acks.

Event ack notification could cause some issues due to recursion. Add a
test ensuring that the recursion doesn't occur.

BUG=711325

Review-Url: https://codereview.chromium.org/2826673005
Cr-Commit-Position: refs/heads/master@{#465367}

Former-commit-id: 7df0af6216babebfbe1a71090bac6b8397d9ae7c